@startuml

interface IRutaDeEscape
{
    + devolverProximaCiudad():Ciudad
    + crearRuta(List<Ciudad> ciudades)
    + ciudadEnLaRuta(ciudad:Ciudad):Boolean
    + devolverCiudadActual():Ciudad
    +agregarMatones(Ciudad ciudad, Ladron ladron)
    +agregarPistas(List<Pista> pistaLadron, HashMap<String, List<Pista>> pistasPorCiudad, Ladron ladron)

}
class RutaFacil
{
    
}
class RutaMedioDificil
{
    
}
class RutaDificil
{
    
}

IRutaDeEscape <|... RutaFacil
IRutaDeEscape <|... RutaMedioDificil
IRutaDeEscape <|... RutaDificil

@enduml